<resources>
    <string name="app_name">Realtor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Listings</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_drawer_open">drawer open</string>
    <string name="nav_drawer_close">drawer close</string>
    <string name="launch_rent_text">I Want To Rent</string>
    <string name="launch_rent_out_text">I Want To Rent Out</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_full_name">Full Name</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_re_enter_password">Re-enter password</string>
    <string name="sign_up_phone_number">Phone Number</string>
    <string name="sign_up_birth_year">Birth year</string>
    <string name="sign_up_button">Sign up</string>
    <string name="sign_up_have_an_account">Have an account?</string>
    <string name="have_account_sign_in">Sign in</string>
    <string name="sign_in_title">Sign In</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_forgot_password">Forgot password?</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_in_don_t_have_an_account">Don\'t have an account?</string>
    <string name="dont_have_account_sign_up">Sign Up</string>
    <string name="nav_wish_list">Wish List</string>
    <string name="verify_email">Verify Email</string>
    <string name="verification_link_sent_to">Verification link will be sent to </string>
    <string name="resend_verify_code">Resend</string>
    <string name="forgot_password_enter_email">Enter Email</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="resend_verify_email">Resend</string>
    <string name="continue_verify">Continue</string>
    <string name="username">Username</string>
    <string name="call">Call</string>
    <string name="add_images">Add images</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="sign_out">Sign Out</string>
    <string name="feedback">Feedback</string>
    <string name="about_app">About App</string>
    <string name="profile">Profile</string>
    <string name="your_posts">Your Posts</string>
    <string name="edit">EDIT</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="save">SAVE</string>
    <string name="version_1_0">Version 1.0</string>
</resources>
