<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/drawer_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>

        <item android:id="@+id/drawer_feedback"
            android:title="@string/feedback"
            android:icon="@drawable/ic_feedback"/>

        <item android:id="@+id/drawer_about"
            android:title="@string/about_app"
            android:icon="@drawable/ic_info"/>

        <item android:id="@+id/drawer_sign_in"
            android:title="@string/sign_in_title"
            android:icon="@drawable/ic_sign_in"/>

        <item android:id="@+id/drawer_sign_out"
            android:title="@string/sign_out"
            android:icon="@drawable/ic_sign_out"/>
    </group>

</menu>