<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:elevation="5dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/wish_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/wish_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:drawableTop="@drawable/ic_location"
            android:text="@string/location"
            android:textSize="@dimen/text_very_small"
            app:layout_constraintStart_toEndOf="@id/wish_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/wish_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/description"
            android:textSize="@dimen/text_very_small"
            app:layout_constraintStart_toEndOf="@+id/wish_image"
            app:layout_constraintTop_toBottomOf="@+id/wish_location" />

        <TextView
            android:id="@+id/wish_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/price"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_medium"
            app:layout_constraintStart_toEndOf="@+id/wish_image"
            app:layout_constraintTop_toBottomOf="@+id/wish_description" />

        <TextView
            android:id="@+id/wish_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/username"
            android:textSize="@dimen/text_very_small"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/wish_phone"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/call_button_background"
            android:text="@string/call"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wish_user_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>