<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/listing_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_location"
            android:drawablePadding="2dp"
            android:text="@string/location"
            android:textColor="@color/mildBlack"
            android:textSize="@dimen/text_small"
            android:textStyle="bold" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="4dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/indicator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:fillColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/fav_listing"
                app:layout_constraintTop_toTopOf="parent"
                app:pageColor="@android:color/darker_gray"
                app:snap="false" />

            <Button
                android:id="@+id/fav_listing"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_bookmark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/listing_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/description"
            android:textColor="@color/mildBlack"
            android:textSize="@dimen/text_very_small" />

        <TextView
            android:id="@+id/listing_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/price"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_large"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/listing_user_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/dp" />

            <TextView
                android:id="@+id/listing_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="0dp"
                android:layout_toStartOf="@+id/call_listing"
                android:layout_toEndOf="@id/listing_user_image"
                android:maxLines="1"
                android:text="@string/username"
                android:textColor="@color/mildBlack"
                android:textSize="@dimen/text_small"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/listing_user_name"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/listing_user_image"
                android:text="@string/app_name"
                android:textSize="@dimen/text_very_small" />

            <Button
                android:id="@+id/call_listing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/call_button_background"
                android:text="@string/call"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>